# ale-interface

./: .gitmodules  Cargo.toml  README.md  build.rs  wrapper.hpp
src/: action.rs  ale.rs  ale_interface.rs  ffi.rs  interface.rs  lib.rs  utils.rs
tests/: action.rs  ale.rs  ale_interface.rs  interface.rs  test.rs  utils.rs
utils/: CMakeLists.txt
utils/src/: CMakeLists.txt  utils.cpp  utils.hpp
