[package]
name = "ale-interface"
version = "0.0.1"
edition = "2021"
authors = ["Alessio Zanga <alessio.zanga@outlook.it>"]
description = "Rust FFI bindings for the Arcade-Learning-Environment."
readme = "README.md"
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/AlessioZanga/ale-interface"
repository = "https://github.com/AlessioZanga/ale-interface"
documentation = "https://docs.rs/ale-interface"
keywords = ["reinforcement-learning"]
categories = ["api-bindings", "science", "simulation"]

[dependencies]

[build-dependencies]
bindgen = "^0.59"
cmake = "^0.1"
c_vec = "^2.0"
vcpkg = "^0.2"

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
rev = "2022.05.10"

[package.metadata.vcpkg.target]
x86_64-unknown-linux-gnu = { triplet = "x64-linux", dependencies = ["sdl2", "sdl2[x11]", "zlib"] }
x86_64-apple-darwin = { triplet = "x64-osx", dependencies = ["sdl2", "zlib"] }
x86_64-pc-windows-msvc = { triplet = "x64-windows", dependencies = ["sdl2", "zlib"] }
